2009-09-18  Piotr Fusik  <fox@scene.pl>
* acpu.c: fixed CLV with ACPU_NO_DECIMAL; simplified ARR

* asap.c, asap_internal.h, acpu.c, apokeysnd.c, csharp/ASAP.ppcs,
  java/ASAP.ppjava: minor refactoring, added some comments


2009-09-17  Piotr Fusik  <fox@scene.pl>
* asap.c, asap.h, asap_internal.h, apokeysnd.c, csharp/ASAP.ppcs,
  java/ASAP.ppjava: added GTIA CONSOL sound emulation

* Makefile, install-sh, win32/Makefile:
  replaced "./install-sh" with "mkdir -p" and "install" because:
  - the ASAP directory can be "noexec"
  - one might be afraid of running "install-sh" as "root"
  - many "mkdir -p" are still shorter than "install-sh"
  - "mkdir -p" should work on new systems

* INSTALL: MADS


2009-09-16  Piotr Fusik  <fox@scene.pl>
* asap.c: detect DLT subsongs and duration, convert to and from SAP


2009-09-16  Marek Konopka  <konop11@poczta.onet.pl>
* players/dlt.as8: disabled MADS warnings


2009-09-15  Piotr Fusik  <fox@scene.pl>
* Makefile: changed variable references from braces to parentheses - to make
  it consistent with other Makefiles and get highlighting in SciTE

* CREDITS, Makefile, README, asap.c, asap.h, asap2wav.c, asap_internal.h,
  csharp/asap2wav.cs, gsplayer/gspasap.c, java/ASAP2WAV.java, players/dlt.as8,
  players/Makefile, win32/Makefile, win32/apollo/ASAP_Apollo.cpp,
  win32/dshow/asap_dsf.cpp, win32/foobar2000/foo_asap.cpp,
  win32/setup/asap.wxs, win32/wasap/wasap.c, win32/winamp/in_asap.c:
  added DLT format


2009-09-14  Piotr Fusik  <fox@scene.pl>
* asap.c, asap.h, asap_internal.h, csharp/ASAP.ppcs, java/ASAP_ModuleInfo.java:
  replaced character mnemonics with ASAP_TYPE_*

* players/Makefile, csharp/Makefile, gsplayer/Makefile, java/Makefile,
  win32/Makefile: created players/Makefile


2009-09-12  Piotr Fusik  <fox@scene.pl>
* configure.ac, INSTALL, Makefile.in, Makefile, win32/Makefile, xmms/libasap.c,
  xmms/libasap-xmms.c, xmms/libasap.map, xmms/libasap-xmms.map:
  dropped "configure"; added "install-lib";